# Hyper-NIDS

./: .gitignore  main.py  pyproject.toml  visualize_hyperbolic.py
configs/: best-config.bak  config.yaml
modules/: __init__.py  loss.py  model.py  poincare_math.py  prototypes.py  recalculate.py  test.py  train.py
modules/utils/: __init__.py  data_utils.py  model_utils.py
